[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/screens_menus/bgscroll.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/screens_menus/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/CharacterStats.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/screens_menus/BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/screens_menus/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/invisible_grabber.tres" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Gameplay.ttf"

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.752941, 0.752941, 0.752941, 1 )
border_width_left = 4
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 112.0, 56.0, 8.0, 216.0, 168.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 128.0, 8.0, 248.0, 64.0, 192.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.819608, 0.65098, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgscroll" parent="." instance=ExtResource( 1 )]

[node name="OptionsTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.5
margin_top = 8.0
margin_right = 92.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 82.0
margin_right = 248.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
text = "Difficulty:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyButton" parent="VBoxContainer/DifficultyLabel" instance=ExtResource( 5 )]
text = "Normal"

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 240.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Volume:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VolumeLabel"]
margin_left = 133.0
margin_top = 1.0
margin_right = 236.0
margin_bottom = 11.0
custom_icons/grabber_disabled = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 4 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 5 )
min_value = -48.0
max_value = 0.0
step = 2.0
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenModeLabel" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 240.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 3 )
text = "Screen Mode:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenModeButton" parent="VBoxContainer/ScreenModeLabel" instance=ExtResource( 5 )]

[node name="BackButton" parent="VBoxContainer" instance=ExtResource( 4 )]
[connection signal="pressed" from="VBoxContainer/DifficultyLabel/DifficultyButton" to="." method="_on_DifficultyButton_pressed"]
[connection signal="changed" from="VBoxContainer/VolumeLabel/VolumeSlider" to="." method="_on_VolumeSlider_changed"]
[connection signal="focus_entered" from="VBoxContainer/VolumeLabel/VolumeSlider" to="." method="_on_VolumeSlider_focus_entered"]
[connection signal="value_changed" from="VBoxContainer/VolumeLabel/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ScreenModeLabel/ScreenModeButton" to="." method="_on_ScreenModeButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/BackButton" to="." method="_on_BackButton_focus_entered"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
